--- a/src/app/zapatillas/zapatillas.component.html
+++ b/src/app/zapatillas/zapatillas.component.html
@@ -6,6 +6,13 @@
 </head>
 <body>
     <h2>{{titulo}}</h2>
+
+    <p>Añadir marca</p>
+    <p><input type="text" [(ngModel)]="mi_marca"/></p>
+    <button (click)="getMarca()">mostrar marca</button>
+    <button (click)="addMarca()">añadir marca</button>
+    <strong>{{mi_marca}}</strong>
+
     <p>Compra la mejores marcas</p>
     <ul>
         <li *ngFor="let marca of marcas; let indice = index">{{indice + ' ' + marca}}</li>
