--- a/src/app/zapatillas/zapatillas.component.html
+++ b/src/app/zapatillas/zapatillas.component.html
@@ -15,7 +15,10 @@
 
     <p>Compra la mejores marcas</p>
     <ul>
-        <li *ngFor="let marca of marcas; let indice = index">{{indice + ' ' + marca}}</li>
+        <li *ngFor="let marca of marcas; let indice = index">{{indice + ' - ' + marca}}
+            <button (click) = "borrarMarca(indice)">Borrar</button>
+        </li>
+        
     </ul>
     <p>Las deportivas disponibles son:</p>
     <ul>
