--- a/src/app/zapatillas/zapatillas.component.html
+++ b/src/app/zapatillas/zapatillas.component.html
@@ -22,7 +22,16 @@
     </ul>
     <p>Las deportivas disponibles son:</p>
     <ul>
-        <li *ngFor="let tillas of zapatillas">{{tillas.nombre}} - <strong>{{tillas.precio}}$ </strong>
+        <li *ngFor="let tillas of zapatillas">{{tillas.nombre}} - 
+            <strong 
+                [class.altoPrecio]= "tillas.precio >= 80"
+                [ngClass]="{
+                    'fondoRojo':tillas.precio >100,
+                    'subrayado':tillas.marca == 'Nike'
+                }"
+            >
+                {{tillas.precio}}$
+            </strong>
             <span *ngIf="tillas.precio < 90"[style.background]="tillas.precio < 90 ? 'red' : 'grey'">¡En Oferta!</span>
         </li>
     </ul>
