--- a/src/app/cursos/cursos.component.html
+++ b/src/app/cursos/cursos.component.html
@@ -1,4 +1,5 @@
 <h1>
     Componente de cursos
 </h1>
+<button (click)="redirigir()">Zapatillas</button>
 <h3 *ngIf="nombre">Bienvenido {{nombre}}</h3>
