--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,18 @@
-<p>home works!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h2>Pagina principal</h2>
+    <div *ngIf="identificado; else noIdentificado">
+        <h3>Estas identificado en la app</h3>
+    </div>
+    <ng-template #noIdentificado>
+        <p>no estas identificado...</p>
+        <button (click)= "setIdentificado()">Identificate!</button>
+    </ng-template>
+</body>
+</html>
