--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,6 +23,8 @@
       <a [routerLink]="['/cursos']" [routerLinkActive]="['active']">Cursos</a>
       &nbsp;
       <a [routerLink]="['/videojuego']" [routerLinkActive]="['active']">Videojuegos</a>
+      &nbsp;
+      <a [routerLink]="['/externo']" [routerLinkActive]="['active']">Externo</a>
     </nav>
     <!-- <button (click)="ocultarVideojuegos(false)" *ngIf="mostrar_videojuegos">ocultar</button>
     <button (click)="ocultarVideojuegos(true)" *ngIf="!mostrar_videojuegos">mostrar</button>
