--- a/src/app/externo/externo.component.html
+++ b/src/app/externo/externo.component.html
@@ -1,4 +1,7 @@
 <input type="text"[(ngModel)]="userId" (keyup.enter)="cargaUsuario()"/>
+<div *ngIf="!user">
+    <img src="http://www.gifde.com/gif/otros/decoracion/cargando-loading/cargando-loading-041.gif" width="50px">
+</div>
 <div *ngIf="user">
     <img src="{{user.avatar}}" width="50px">
     <h2>{{user.first_name + ' ' + user.last_name}}</h2>
