pipes para transformar texto

--- a/src/app/externo/externo.component.html
+++ b/src/app/externo/externo.component.html
@@ -1,4 +1,6 @@
 {{fecha | date:'dd/mm/yy'}}
+<br>
+{{'HOLA MUNDO USANDO PIPES' | lowercase}}
 <hr>
 <input type="text"[(ngModel)]="userId" (keyup.enter)="cargaUsuario()"/>
 <div *ngIf="!user">
