--- a/src/app/externo/externo.component.html
+++ b/src/app/externo/externo.component.html
@@ -1,6 +1,8 @@
 {{fecha | date:'dd/mm/yy'}}
-<br>
+<br/>
 {{'HOLA MUNDO USANDO PIPES' | lowercase}}
+<br/>
+{{ 4 | calculadora : 2}}
 <hr>
 <input type="text"[(ngModel)]="userId" (keyup.enter)="cargaUsuario()"/>
 <div *ngIf="!user">
