--- a/src/app/externo/externo.component.html
+++ b/src/app/externo/externo.component.html
@@ -12,3 +12,26 @@
     <img src="{{user.avatar}}" width="50px">
     <h2>{{user.first_name + ' ' + user.last_name}}</h2>
 </div>
+
+<hr>
+<h2>Crear usuario</h2>
+<form #newUser="ngForm" (ngSubmit)="onSubmit(newUser)">
+    <p>
+        <label for="name">Nombre</label>
+        <input type="text" name="name" #name="ngModel" [(ngModel)]="new_user.name">
+        <span *ngIf="name.touched && !name.valid">Nombre no valido</span>
+    </p>
+    <p>
+        <label for="job">Trabajo</label>
+        <input type="text" name="job" #job="ngModel" [(ngModel)]="new_user.job">
+        <span *ngIf="job.touched && !job.valid">Trabajo no valido</span>
+    </p>
+
+    <input type="submit" value="guardar usuario" [disabled]="!newUser.form.valid">
+</form>
+
+<div *ngIf="usuario_guardado">
+    <h5>el usuario se guardo correctamente</h5>
+    <h3>{{usuario_guardado.name}}</h3>
+    <h4>{{usuario_guardado.job}}</h4>
+</div>
